@@ -133,6 +133,8 @@ set(POCL_LIB_SOURCES  "clCreateContextFromType.c"
                    "clCreateSubDevices.c"
                    "clUnloadPlatformCompiler.c"
                    "clSetContentSizeBufferPoCL.c"
+                   "clCreatePipe.c"
+                   "clGetPipeInfo.c"
                    "pocl_cl.h" "pocl_util.h" "pocl_util.c"
                    "pocl_image_util.c" "pocl_image_util.h"
                    "pocl_img_buf_cpy.c"
